# reseller-cashback-api

./: .gitignore  Dockerfile  Makefile  README.md  dev.yml  env.example  pyproject.toml  pytest.ini
docs/: reseller-cashback-insomnia.json
reseller_cashback_api/: manage.py
reseller_cashback_api/apps/: conftest.py
reseller_cashback_api/apps/order/: api.py  models.py  serializers.py  views.py
reseller_cashback_api/apps/order/migrations/: 0001_initial.py
reseller_cashback_api/apps/order/tests/: test_apis.py  test_models.py  test_serializers.py  test_views.py
reseller_cashback_api/apps/reseller/: admin.py  models.py  serializers.py  views.py
reseller_cashback_api/apps/reseller/migrations/: 0001_initial.py  0002_auto_20210320_1439.py
reseller_cashback_api/apps/reseller/tests/: conftest.py  test_models.py  test_serializers.py  test_views.py
reseller_cashback_api/reseller_cashback_api/: asgi.py  settings.py  urls.py  wsgi.py
